2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_cs8900a.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* include/cs8900.h: Check for lost ints if we can - when kernel present.
	* src/if_cs8900a.c: Use CYGINT_IO_ETH_INT_SUPPORT_REQUIRED where
	appropriate.

2002-03-20  Gary Thomas  <gthomas@redhat.com>
2002-03-06  Pieter Truter <ptruter@intrinsyc.com>

	* src/if_cs8900a.c (cs8900a_isr): Need to acknowledge interrupt
	here (in case DSR/poll causes a new one to occur).	

2002-02-18  Gary Thomas  <gthomas@redhat.com>

	* cdl/cl_cs8900a_eth_drivers.cdl: 
	Add new interface CYGINT_IO_ETH_MULTICAST which is used to
	insure that drivers support multicast addresses if IPv6 is used.

2002-02-15  Gary Thomas  <gthomas@redhat.com>

	* include/cs8900.h: 
	* src/if_cs8900a.c (cs8900a_control): Support multicast addresses.

2002-02-04  Gary Thomas  <gthomas@redhat.com>

	* src/if_cs8900a.c: 
	* include/cs8900.h: Add CYGHWR_CL_CS8900A_PLF_POST_RESET() macro.

2001-11-29  Jesper Skov  <jskov@redhat.com>

	* src/if_cs8900a.c (cs8900a_init): Changed order of ESA source
	checking so user can always override at RedBoot runtime.

2001-11-20  Jesper Skov  <jskov@redhat.com>

	* src/if_cs8900a.c: Added some more debug output. Set all 4 LAF
	registers. Don't reset device to stop it - just disable TX & RX.

2001-11-16  Jesper Skov  <jskov@redhat.com>

	* src/if_cs8900a.c (cs8900a_send): Wait for controller ready
	signal before starting transmission.

2001-11-14  Jesper Skov  <jskov@redhat.com>

	* src/if_cs8900a.c: Use platform init, reset and int_clear
	macros.
	* include/cs8900.h: Tidy up those (default) macros.

2001-11-09  Jesper Skov  <jskov@redhat.com>

	* src/if_cs8900a.c (cs8900a_init): Rewrote ESA setup to be more
	consistent.

	* include/cs8900.h: Added provide_esa field to driver structure.
